# asio_socket_ipc

./: CMakeLists.txt  README.md
src/asioipclib/: CMakeLists.txt  ConnectionManager.cpp  ConnectionManager.h  EzTimer.cpp  EzTimer.h  MessageDefine.hpp  MessageManager.cpp  MessageManager.h  SessionManager.cpp  SessionManager.h  SocketFactoryBase.h  SocketIpcClient.cpp  SocketIpcClient.h  SocketIpcCore.cpp  SocketIpcCore.h  SocketIpcServer.cpp  SocketIpcServer.h
src/asioipclib/asio_wrapper/: CMakeLists.txt  buffer.cpp  buffer.h  callback_timer.cpp  callback_timer.h  error_code.cpp  error_code.h  server.cpp  server.h  session.cpp  session.h  ssl_info.cpp  ssl_info.h  tcp_pack.cpp  tcp_pack.h  tool.cpp  tool.h  typedef.h
src/client/: CMakeLists.txt  main.cpp
src/include/boost/asio/: io_context.hpp
src/include/boost/asio/detail/: epoll_reactor.hpp  scheduler.hpp
src/include/boost/asio/detail/impl/: scheduler.ipp  strand_executor_service.hpp  strand_service.ipp
src/include/boost/regex/: user.hpp
src/include/boost/smart_ptr/: shared_ptr.hpp
src/include/common/: MessageDefine.hpp
src/server/: CMakeLists.txt  main.cpp
